--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 
 h1 {
+  font-family: 'Special Elite', cursive;
   color: #FF6000;
 }
 
@@ -18,7 +19,7 @@ h1 {
 }
 
 .btn-primary:hover {
-  background-color: #ff7d2c;
+  background-color: #FF6000;
   color: #FFE6C7;
 }
 
